# tpm-luks

./: Makefile.am  README  configure.in  tpm-luks.conf.in  tpm-luks.spec.in
apt/: zzz-tpm-luks-update.in
dracut/: Makefile.am
dracut/RHEL6/: create-plain-key.sh
dracut/RHEL6/plymouth-tpm/: cryptroot-ask.sh  cryptroot-dontask-tpm.sh  install
initramfs-tools/: create-plain-key.sh  cryptroot-ask-tpm.sh  cryptroot-dontask-tpm.sh
initramfs-tools/Ubuntu14.04/hooks/: cryptroot
initramfs-tools/Ubuntu14.04/scripts/local-top/: cryptroot
swtpm-utils/: Makefile.am
tpm-luks/: tpm-luks  tpm-luks-gen-tgrub-pcr-values  tpm-luks-update
